4.37

- Optimized: Only broadcast the last global marker command over the network and not all