@@ -149,3 +149,4 @@ STR_DOM_MISSIONSTRING_2034
 STR_DOM_MISSIONSTRING_2035
 STR_DOM_MISSIONSTRING_2036
 STR_DOM_MISSIONSTRING_2037
+STR_DOM_MISSIONSTRING_2038
