@@ -2,3 +2,4 @@ STR_DOM_MISSIONSTRING_812_GENERIC_NAME
 STR_DOM_MISSIONSTRING_1575
 STR_DOM_MISSIONSTRING_1977
 STR_DOM_MISSIONSTRING_2007_FPS
+STR_DOM_MISSIONSTRING_2038
